Update and rename rock-paper-scissor.html to index.html

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <title>Rock Paper Scissors</title>
-    <link href="r-p-s.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
   </head>
   <body>
     <p class="title">Rock Paper Scissors</p>
@@ -35,6 +35,6 @@
       autoplay();
     ">Auto Play</button>
 
-    <script src="r-p-s.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
