--- a/index.html
+++ b/index.html
@@ -6,34 +6,26 @@
   </head>
   <body>
     <p class="title">Rock Paper Scissors</p>
-    <button class="move-button" onclick="
-      playGame('rock');
-    "><img src="rock-emoji.png" class="move-icon"></button>
+    <button class="move-button js-rock-button">
+      <img src="rock-emoji.png" class="move-icon">
+    </button>
 
-    <button class="move-button" onclick="
-      playGame('paper');
-    "><img src="paper-emoji.png" class="move-icon"></button>
+    <button class="move-button js-paper-button">
+      <img src="paper-emoji.png" class="move-icon">
+    </button>
 
-    <button class="move-button" onclick="
-      playGame('scissors');
-    "><img src="scissors-emoji.png" class="move-icon"></button>
+    <button class="move-button js-scissor-button">
+      <img src="scissors-emoji.png" class="move-icon">
+    </button>
 
     <p class="js-result result"></p>
 
     <p class="js-moves"></p>
 
     <p class="js-score score"></p>
-    <button class="reset-score-button" onclick="
-      score.wins = 0;
-      score.losses = 0;
-      score.ties = 0;
-      localStorage.removeItem('score');
-      updateScoreElement();
-    ">Reset Score</button>
+    <button class="reset-score-button js-reset-button">Reset Score</button>
 
-    <button class="js-auto-play-button auto-play-button" onclick="
-      autoplay();
-    ">Auto Play</button>
+    <button class="js-auto-play-button auto-play-button">Auto Play</button>
 
     <script src="index.js"></script>
   </body>
