--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <button class="reset-score-button js-reset-button">Reset Score</button>
 
     <button class="js-auto-play-button auto-play-button">Auto Play</button>
+    <div class="js-confirmation confirmation-box" style="display: block;"></div>
 
     <script src="index.js"></script>
   </body>
