--- a/index.html
+++ b/index.html
@@ -5,29 +5,30 @@
     <link href="styles.css" rel="stylesheet">
   </head>
   <body>
-    <p class="title">Rock Paper Scissors</p>
-    <button class="move-button js-rock-button">
-      <img src="rock-emoji.png" class="move-icon">
-    </button>
+    <main class="main">
+      <p class="title">Rock Paper Scissors</p>
+      <button class="move-button js-rock-button">
+        <img src="rock-emoji.png" class="move-icon">
+      </button>
 
-    <button class="move-button js-paper-button">
-      <img src="paper-emoji.png" class="move-icon">
-    </button>
+      <button class="move-button js-paper-button">
+        <img src="paper-emoji.png" class="move-icon">
+      </button>
 
-    <button class="move-button js-scissor-button">
-      <img src="scissors-emoji.png" class="move-icon">
-    </button>
+      <button class="move-button js-scissor-button">
+        <img src="scissors-emoji.png" class="move-icon">
+      </button>
 
-    <p class="js-result result"></p>
+      <p class="js-result result"></p>
 
-    <p class="js-moves"></p>
+      <p class="js-moves"></p>
 
-    <p class="js-score score"></p>
-    <button class="reset-score-button js-reset-button">Reset Score</button>
+      <p class="js-score score"></p>
+      <button class="reset-score-button js-reset-button">Reset Score</button>
 
-    <button class="js-auto-play-button auto-play-button">Auto Play</button>
-    <div class="js-confirmation confirmation-box" style="display: block;"></div>
-
+      <button class="js-auto-play-button auto-play-button">Auto Play</button>
+      <div class="js-confirmation confirmation-box" style="display: block;"></div>
+    </main>
     <script src="index.js"></script>
   </body>
 </html>
